re PR bootstrap/40061 (Bootstrap failure in dwarf2out.c, function add_subscript_info: 'dimension_number' undefined)

2009-05-12  Tobias Burnus  <burnus@net-b.de>

        PR bootstrap/40061
        * dwarf2.out.c (add_subscript_info): Initialize dimension for
        MIPS_DEBUGGING_INFO.

From-SVN: r147445